style: fix horizontal overflow on file details sidebar on smaller screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -353,20 +353,34 @@ main:not([class]) {
 }
 .fileDetailsAside {
   background-color: var(--card-clr);
-  position: absolute;
-  inset: unset;
-  top: 0;
+  position: fixed;
+  inset-block: 0;
   left: 100%;
+  right: auto;
+
   min-height: 100dvh;
-  min-width: 450px;
+  width: 450px;
+  max-width: 100vw;
   z-index: 1;
-  transition: transform 0.25s ease-out;
+
+  /* transition:
+    transform 0.35s cubic-bezier(0.25, 1, 0.5, 1),
+    display 0.35s ease-out allow-discrete,
+    overlay 0.35s ease-out allow-discrete; */
+  transition: 0.35s ease-out;
+  transform: translateX(0);
+
   &:popover-open {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 2rem;
+
+    /* transform: translateX(-100%); */
     animation: slide 0.35s ease-out forwards;
+    @starting-style {
+      transform: translateX(100%);
+    }
   }
   border: 1px solid var(--btn-bg);
   padding-block: 2rem;
@@ -378,7 +392,6 @@ main:not([class]) {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding-inline-end: 1rem;
       h3 {
         font-size: var(--2rem);
       }
@@ -426,7 +439,7 @@ main:not([class]) {
     }
   }
   @media (width <= 450px) {
-    min-width: 320px;
+    width: 320px;
   }
 }
 @keyframes slide {
